--- a/nginx-argo-k8s-demo/nginx-app/configmap.yaml
+++ b/nginx-argo-k8s-demo/nginx-app/configmap.yaml
@@ -1,1 +1,13 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: custom-html
+data:
+  index.html: |
+    <html>
+      <head><title>Welcome to Argo CD + NGINX</title></head>
+      <body>
+        <h1>Hello from ConfigMap!</h1>
+      </body>
+    </html>
 
